# websocket-writer

./: .env.template  .gitignore  README.md  pyproject.toml
src/websocket_writer/: __init__.py
src/websocket_writer/database/: __init__.py  manager.py  writer.py
src/websocket_writer/settings/: __init__.py  auth.py  database.py  stomp.py  websocket.py
src/websocket_writer/websocket/: __init__.py  auth_manager.py  message_buffer.py  parser.py  reader.py  websocket_manager.py
