[project]
name = "websocket-writer"
version = "0.0.1"
description = "Library feeding on a websocket to write objects to database"
authors = [
    { name = "Vincent Bonillo", email = "contact@jllspear.com" }
]
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "psycopg>=3.3.3",
    "sqlmodel>=0.0.37",
    "geoalchemy2>=0.18.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "websockets>=16.0",
    "aiohttp>=3.13.3"
]

[project.urls]
Homepage = "https://github.com/jllspear/websocket-writer"
Repository = "https://github.com/jllspear/websocket-writer"

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.7",
]